--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
   </head>
   <body>
     <main>
-      <div class="sedans">
-        <img src="./Group 2 (2).png" alt="" />
-        <h1>Sedans</h1>
-        <p>
-          Take an SUV for its spacious interior, power, and versatility. Perfect
-          for your next family vacation and off-road adventures.
-        </p>
-        <button>Learn More</button>
-      </div>
-      <div class="suvs">
-        <img src="./Group 3.png" alt="" />
-        <h1>SUVs</h1>
-        <p>
-          Choose a sedan for its affordability and excellent fuel economy. Ideal
-          for cruising in the city or on your next road trip.
-        </p>
-        <button>Learn More</button>
-      </div>
-      <div class="luxury">
-        <img src="./Group 4.png" alt="" />
-        <h1>Luxury</h1>
-        <p>
-          Cruise in the best car brands without the bloated prices. Enjoy the
-          enhanced comfort of a luxury rental and arrive in style.
-        </p>
-        <button>Learn More</button>
+      <div class="main">
+        <div class="sedans">
+          <img src="./Group 2 (2).png" alt="" />
+          <h1>Sedans</h1>
+          <p>
+            Choose a sedan for its affordability and excellent fuel economy.
+            Ideal for cruising in the city or on your next road trip.
+          </p>
+          <button>Learn More</button>
+        </div>
+        <div class="suvs">
+          <img src="./Group 3.png" alt="" />
+          <h1>SUVs</h1>
+          <p>
+            Take an SUV for its spacious interior, power, and versatility.
+            Perfect for your next family vacation and off-road adventures.
+          </p>
+          <button>Learn More</button>
+        </div>
+        <div class="luxury">
+          <img src="./Group 4.png" alt="" />
+          <h1>Luxury</h1>
+          <p>
+            Cruise in the best car brands without the bloated prices. Enjoy the
+            enhanced comfort of a luxury rental and arrive in style.
+          </p>
+          <button>Learn More</button>
+        </div>
       </div>
     </main>
   </body>
